--- a/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
@@ -42,4 +42,10 @@
     <string name="advanced_reboot_title">Варианты перезагрузки</string>
     <string name="advanced_reboot_summary">Показывать дополнительные параметры перезагрузки устройства (в загрузчик, режим восстановления или перезапуска интерфейса) в меню кнопки питания</string>
 
+    <!-- lock screen visualizer -->
+    <string name="lockscreen_visualizer_title">Визуализация спектра музыки</string>
+
+    <!-- title for lock screen weather preference -->
+    <string name="lockscreen_weather_enabled_title">Сведения о погоде</string>
+
 </resources>
