--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -67,4 +67,10 @@
     <string name="proximity_wake_title">Запобігання випадкового пробудження</string>
     <string name="proximity_wake_summary">Перевіряти датчик наближення перед пробудженням екрану</string>
 
+    <!-- CM Updater -->
+    <string name="cmupdate_settings_title">Оновлення CyanogenMod</string>
+
+    <!-- About phone screen, CyanogenMod version -->
+    <string name="mod_version">Версія CyanogenMod</string>
+
 </resources>
