--- a/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
@@ -73,4 +73,14 @@
     <!-- About phone screen, CyanogenMod version -->
     <string name="mod_version">Версия CyanogenMod</string>
 
+    <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
+    <plurals name="show_dev_countdown_cm">
+        <item quantity="one">Вы сейчас в <xliff:g id="step_count">%1$d</xliff:g> шаге для включения режима разработчика.</item>
+        <item quantity="other">Вы сейчас в <xliff:g id="step_count">%1$d</xliff:g> шагах для включения режима разработчика.</item>
+    </plurals>
+    <!-- [CHAR LIMIT=NONE] Device Info screen. Confirmation that developer settings are enabled -->
+    <string name="show_dev_on_cm">Настройки для разработчиков включены!</string>
+    <!-- [CHAR LIMIT=NONE] Device Info screen. Okay we get it, stop pressing, you already have it on -->
+    <string name="show_dev_already_cm">Не нужно, настройки для разработчиков уже включены.</string>
+
 </resources>
