--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -83,4 +83,17 @@
     <!-- [CHAR LIMIT=NONE] Device Info screen. Okay we get it, stop pressing, you already have it on -->
     <string name="show_dev_already_cm">Не потрібно, налаштування для розробників вже увімкнені.</string>
 
+    <!-- Android debugging -->
+    <string name="enable_adb_cm">Налагодження Android</string>
+    <string name="enable_adb_summary_cm">Увімкнути інтерфейс Android Debug Bridge (ADB)</string>
+
+    <!-- Android debugging notification -->
+    <string name="adb_notify">Сповіщення налагодження</string>
+    <string name="adb_notify_summary">Відображати сповіщення, коли налагодження USB або по мережі увімкнено</string>
+
+    <!-- Android debugging over network -->
+    <string name="adb_over_network">ADB по мережі</string>
+    <string name="adb_over_network_summary">Увімкнути налагодження TCP/IP через мережеві інтерфейси (Wi-Fi, USB мережі). Це налаштування скидається при перезавантаженні.</string>
+    <string name="adb_over_network_warning">УВАГА: коли включено налагодження по мережі, пристрій відкритий для неконтрольованого доступу з усіх підключених мереж!\n\nВикористовуйте цю функцію тільки тоді, коли ви підключені до довірених мереж.\n\nВи дійсно хочете увімкнути цю функцію?</string>
+
 </resources>
