--- a/overlay/packages/apps/Snap/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Snap/res/values-uk/cm_strings.xml
@@ -203,7 +203,7 @@
   <!-- Power shutter -->
   <string name="pref_camera_power_shutter_title">Зйомка кнопкою живлення</string>
   <!-- Max brightness -->
-  <string name="pref_camera_max_brightness_title">Максимальна яскрависть екрану</string>
+  <string name="pref_camera_max_brightness_title">Максимальна яскравість екрану</string>
   <!-- Touch focus duration -->
   <string name="pref_camera_focustime_title">Фокус дотиком</string>
   <string name="pref_camera_focustime_entry_0">0 секунд</string>
