--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -101,4 +101,14 @@
     <string name="increasing_ring_min_volume_title">Початкова гучність</string>
     <string name="increasing_ring_ramp_up_time_title">Час збільшення</string>
 
+    <!-- MSIM SIM status -->
+    <string name="sim_card_status_title">Статус SIM %d</string>
+    <string name="sim_card_lock_settings_title">Налаштування блокування SIM %d</string>
+    <string name="sim_card_summary_empty">SIM не вставлено</string>
+    <string name="sim_mobile_network_settings_category_title">Налаштування мобільної мережі</string>
+    <string name="sim_mobile_network_settings_title">Налаштування SIM %d</string>
+
+    <!-- Volume settings - Volume adjustment sound -->
+    <string name="volume_adjust_sounds_title">Звуки регулювання гучності</string>
+
 </resources>
