--- a/ExtraSettings/res/xml/pref_allsettings.xml
+++ b/ExtraSettings/res/xml/pref_allsettings.xml
@@ -4,7 +4,7 @@
             android:title="@string/pref_header_extra"
             android:key="pref_header_extra_settings">
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:key="etap_en_b"
 			android:title="@string/pref_title_enable_etap"
 			android:summary="@string/pref_summary_enable_etap"
