--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -75,7 +75,7 @@
 
     <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
     <plurals name="show_dev_countdown_cm">
-        <item quantity="one">Вы сейчас в <xliff:g id="step_count">%1$d</xliff:g> кроці для увімкнення режима розробника.</item>
+        <item quantity="one">Вы зараз в <xliff:g id="step_count">%1$d</xliff:g> кроці для увімкнення режима розробника.</item>
         <item quantity="other">Вы зараз в <xliff:g id="step_count">%1$d</xliff:g> кроках для увімкнення режима розробника.</item>
     </plurals>
     <!-- [CHAR LIMIT=NONE] Device Info screen. Confirmation that developer settings are enabled -->
