--- a/overlay/frameworks/base/core/res/res/values-uk/cm_strings.xml
+++ b/overlay/frameworks/base/core/res/res/values-uk/cm_strings.xml
@@ -17,6 +17,9 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- label for item that screenshots in phone options dialog -->
+    <string name="global_action_screenshot">Скріншот</string>
+
     <!-- Long-press back kill application -->
     <string name="app_killed_message">Програма закрита</string>
 
