--- a/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
@@ -122,4 +122,9 @@
     <!-- Volume settings - Volume adjustment sound -->
     <string name="volume_adjust_sounds_title">Звук при регулировке громкости</string>
 
+    <!-- About phone screen, Device model -->
+    <string name="device_model">Модель устройства</string>
+    <!-- About phone screen, Device name -->
+    <string name="device_name">Название устройства</string>
+
 </resources>
