--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -134,4 +134,10 @@
     <string name="app_ops_labels_toggle_mobile_data">Вмик./Вимик. мобільного інтернету</string>
     <string name="app_ops_labels_toggle_bluetooth">Вмик./Вимик. bluetooth</string>
 
+    <!-- Allow vibration in zen mode -->
+    <string name="zen_mode_vibration">Вібрація</string>
+    <string name="zen_mode_vibration_never">Не вібрувати</string>
+    <string name="zen_mode_vibration_calls_only">Вібрувати тільки при викликах</string>
+    <string name="zen_mode_vibration_calls_and_notifications">Вібрувати при викликах і сповіщеннях</string>
+
 </resources>
