--- a/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/cm_strings.xml
@@ -140,4 +140,7 @@
     <string name="zen_mode_vibration_calls_only">Вибрировать только при вызовах</string>
     <string name="zen_mode_vibration_calls_and_notifications">Вибрировать при вызовах и уведомлениях</string>
 
+    <!-- Notification importance -->
+    <string name="tuner_full_importance_settings">Расширенная настройка уведомлений</string>
+
 </resources>
