--- a/overlay/frameworks/base/packages/SystemUI/res/values-ru/cm_strings.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values-ru/cm_strings.xml
@@ -29,4 +29,36 @@
     <string name="lockscreen_choose_action_title">Выбор действия</string>
     <string name="lockscreen_none_target">Ничего</string>
 
+    <!-- [CHAR LIMIT=NONE] Importance Tuner setting title -->
+    <string name="cm_power_notification_controls_description">С помощью этой функции вы можете устанавливать уровень важности уведомлений от 0 до 6 для каждого приложения.
+        \n\n<b>Уровень 6</b>
+        \n‒ Помещать уведомления в начало списка.
+        \n‒ Показывать полноэкранные уведомления.
+        \n‒ Показывать всплывающие уведомления.
+        \n\n<b>Уровень 5</b>
+        \n‒ Не показывать полноэкранные уведомления.
+        \n‒ Показывать всплывающие уведомления.
+        \n\n<b>Уровень 4</b>
+        \n‒ Не показывать полноэкранные уведомления.
+        \n‒ Не показывать всплывающие уведомления.
+        \n\n<b>Уровень 3</b>
+        \n‒ Не показывать полноэкранные уведомления.
+        \n‒ Не показывать всплывающие уведомления.
+        \n‒ Не использовать звук и вибрацию.
+        \n\n<b>Уровень 2</b>
+        \n‒ Не показывать полноэкранные уведомления.
+        \n‒ Не показывать всплывающие уведомления.
+        \n‒ Не использовать звук и вибрацию.
+        \n‒ Не показывать на экране блокировки.
+        \n‒ Помещать уведомления в конец списка.
+        \n\n<b>Уровень 1</b>
+        \n‒ Не показывать полноэкранные уведомления.
+        \n‒ Не показывать всплывающие уведомления.
+        \n‒ Не использовать звук и вибрацию.
+        \n‒ Не показывать на экране блокировки и в строке состояния.
+        \n‒ Помещать уведомления в конец списка.
+        \n\n<b>Уровень 0</b>
+        \n‒ Блокировать все уведомления приложения.
+    </string>
+
 </resources>
