--- a/overlay/frameworks/base/packages/SystemUI/res/values-uk/cm_strings.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values-uk/cm_strings.xml
@@ -29,4 +29,36 @@
     <string name="lockscreen_choose_action_title">Виберіть дію</string>
     <string name="lockscreen_none_target">Нічого</string>
 
+    <!-- [CHAR LIMIT=NONE] Importance Tuner setting title -->
+    <string name="cm_power_notification_controls_description">За допомогою цієї функції ви можете встановлювати рівень важливості сповіщень від 0 до 6 для кожного додатку.
+        \n\n<b>Рівень 6</b>
+        \n‒ Розміщувати сповіщення в початку списку.
+        \n‒ Показувати повноекранні сповіщення.
+        \n‒ Показувати спливаючі сповіщення.
+        \n\n<b>Рівень 5</b>
+        \n‒ Не показувати повноекранні сповіщення.
+        \n‒ Показувати спливаючі сповіщення.
+        \n\n<b>Рівень 4</b>
+        \n‒ Не показувати повноекранні сповіщення.
+        \n‒ Не показувати спливаючі сповіщення.
+        \n\n<b>Рівень 3</b>
+        \n‒ Не показувати повноекранні сповіщення.
+        \n‒ Не показувати спливаючі сповіщення.
+        \n‒ Не використовувати звук і вібрацію.
+        \n\n<b>Рівень 2</b>
+        \n‒ Не показувати повноекранні сповіщення.
+        \n‒ Не показувати спливаючі сповіщення.
+        \n‒ Не використовувати звук і вібрацію.
+        \n‒ Не показувати на екрані блокування.
+        \n‒ Розміщувати сповіщення в кінці списку.
+        \n\n<b>Рівень 1</b>
+        \n‒ Не показувати повноекранні сповіщення.
+        \n‒ Не показувати спливаючі сповіщення.
+        \n‒ Не використовувати звук і вібрацію.
+        \n‒ Не показувати на екрані блокування і в рядку стану.
+        \n‒ Розміщувати сповіщення в кінці списку.
+        \n\n<b>Рівень 0</b>
+        \n‒ Блокувати всі сповіщення додатку.
+    </string>
+
 </resources>
