--- a/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
+++ b/overlay/packages/apps/Settings/res/values-uk/cm_strings.xml
@@ -154,4 +154,9 @@
     <string name="hotstpot_inactivity_timeout_never_summary_text">Не вимикати</string>
     <string name="hotstpot_inactivity_timeout_summary_text">Вимикати через <xliff:g id="timeout">%1$s</xliff:g></string>
 
+    <!-- Vibrator intensity -->
+    <string name="vibrator_intensity_title">Інтенсивність вібрації</string>
+    <string name="vibrator_intensity_dialog_warning">Значення вище %1$d%% не рекомендується</string>
+    <string name="vibrator_intensity_dialog_reset">Скинути</string>
+
 </resources>
