--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -290,7 +290,7 @@
         <item>"mobile_cbs,12,0,2,300000,true"</item>
         <item>"bluetooth,7,7,2,-1,true"</item>
         <item>"ethernet,9,9,4,-1,true"</item>
-        <item>"mobile_emergency,15,0,2,-1,true</item>
+        <item>"mobile_emergency,15,0,2,-1,true"</item>
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
