--- a/overlay/packages/apps/Settings/res/values/bools.xml
+++ b/overlay/packages/apps/Settings/res/values/bools.xml
@@ -17,4 +17,7 @@
 <resources>
     <!-- Whether to show a preference item for mobile plan -->
     <bool name="config_show_mobile_plan">false</bool>
+
+    <!-- Flag to force disabling of lift to wake feature -->
+      <bool name="config_forceDisableLiftToWake">true</bool>
 </resources>
