--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -34,6 +34,6 @@
     <!-- Show enabled lte option for lte device -->
     <bool name="config_enabled_lte" translatable="false">true</bool>
 
-    <!-- Allows the telephony HFA logic to run even if we're not in setup wizard. -->
-    <bool name="config_allow_hfa_outside_of_setup_wizard">false</bool>
+    <!-- Show APN Settings for some CDMA carriers -->
+    <bool name="config_show_apn_setting_cdma">true</bool>
 </resources>
